--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/3rdParty/GSL"]
 	path = src/3rdParty/GSL
 	url = https://github.com/microsoft/GSL
+[submodule "src/mod/Archi"]
+	path = src/mod/Archi
+	url = https://github.com/touch-topnotch/Archi
