Compile: Rename archi module

--- a/src/Mod/CMakeLists.txt
+++ b/src/Mod/CMakeLists.txt
@@ -6,9 +6,7 @@ if(BUILD_BIM)
   add_subdirectory(BIM)
 endif(BUILD_BIM)
 
-if(BUILD_ARCHI)
-    add_subdirectory(Archi)
-endif(BUILD_ARCHI)
+
 
 if(BUILD_ASSEMBLY)
   add_subdirectory(Assembly)
@@ -135,7 +133,7 @@ if(BUILD_TECHDRAW)
     add_subdirectory(TechDraw)
 endif(BUILD_TECHDRAW)
 
-#add_subdirectory(TemplatePyMod)
+# add_subdirectory(TemplatePy)
 
 if(BUILD_TEST)
   add_subdirectory(Test)
@@ -148,3 +146,7 @@ endif(BUILD_TUX)
 if(BUILD_WEB)
     add_subdirectory(Web)
 endif(BUILD_WEB)
+
+if(BUILD_ARCHI)
+    add_subdirectory(ArchiModule)
+endif(BUILD_ARCHI)
