--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "src/3rdParty/GSL"]
 	path = src/3rdParty/GSL
 	url = https://github.com/microsoft/GSL
-[submodule "src/mod/Archi"]
-	path = src/mod/Archi
-	url = https://github.com/touch-topnotch/Archi
+[submodule "src/mod/ArchiModule"]
+	path = src/mod/ArchiModule
+	url = https://github.com/touch-topnotch/ArchiModule.git
