--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ files: |
         tests/src|
         src/Mod/AddonManager|
         src/Mod/Assembly|
+        src/Mod/ArchiModule|
         src/Mod/CAM|
         src/Mod/Cloud|
         src/Mod/Drawing|
