Compilation: Windows deploy update

--- a/src/3rdParty/libE57Format/CMakeLists.txt
+++ b/src/3rdParty/libE57Format/CMakeLists.txt
@@ -172,7 +172,7 @@ if ( WIN32 )
 endif()
 
 # Target Libraries
-target_link_libraries( E57Format PRIVATE XercesC::XercesC )
+ target_link_libraries( E57Format PRIVATE XercesC::XercesC )
 
 # Install
 install(
@@ -198,3 +198,12 @@ install(
 #    DESTINATION
 #        lib/cmake/E57Format
 #)
+# --------  CRT = /MD  ---------------------------------
+set_target_properties(E57Format PROPERTIES
+    MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")          # /MD
+
+# --------  Явно подтягиваем то, что /NODEFAULTLIB убрал
+target_link_libraries(E57Format PRIVATE
+    vcruntime.lib
+    ucrt.lib
+    msvcprt.lib)
