--- a/src/Tools/embedded/Win32/FreeCAD_widget/FreeCAD_widget.rc
+++ b/src/Tools/embedded/Win32/FreeCAD_widget/FreeCAD_widget.rc
@@ -47,7 +47,7 @@ BEGIN
     BEGIN
         MENUITEM "E&xit",                       IDM_EXIT
     END
-    POPUP "FreeCAD"
+    POPUP "ARCHI"
     BEGIN
         MENUITEM "Load",                        ID_FREECAD_LOAD
         MENUITEM "New document",                ID_FREECAD_NEWDOCUMENT, INACTIVE
