--- a/package/rattler-build/pixi.toml
+++ b/package/rattler-build/pixi.toml
@@ -3,7 +3,7 @@ channels = [
     "https://prefix.dev/pixi-build-backends",
     "https://prefix.dev/conda-forge",
 ]
-platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]
+platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
 preview = ["pixi-build"]
 
 [package]
@@ -16,8 +16,6 @@ description = "FreeCAD"
 [package.build]
 backend = { name = "pixi-build-rattler-build", version = "*" }
 
-[feature.freecad.dependencies]
-freecad = { path = "." }
 
 [feature.package.dependencies]
 python = ">=3.11,<3.12"
@@ -62,5 +60,4 @@ git = "*"
 create_bundle = 'bash -c "cd windows && bash create_bundle.sh"'
 
 [environments]
-default = ["freecad"]
 package = ["package"]
